--- a/index.html
+++ b/index.html
@@ -154,6 +154,29 @@
                 </div>
             </div>
     </section>
+    <footer>
+        <div class="footer-wrapper">
+            <div class="container">
+                <div class="footer-photo">
+                    <div class="footer-photo-img">
+                        <img src="img/fb.svg" alt="">
+                    </div>
+                    <div class="footer-photo-img">
+                        <img src="img/insta.svg" alt="">
+                    </div>
+                    <div class="footer-photo-img">
+                        <img src="img/Linkedin.svg" alt="">
+                    </div>
+                    <div class="footer-photo-img">
+                        <img src="img/Group.svg" alt="">
+                    </div>
+                </div>
+                <div class="footer-discs">
+                    <p>Copyright ©2020 All rights reserved </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
