--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#">Works</a>
                 </li>
                 <li class="header-menu-item">
-                    <a href="#">Blog</a>
+                    <a href="block.html">Blog</a>
                 </li>
                 <li class="header-menu-item">
                     <a href="#">About</a>
