--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </a>
       <div id="myLinks">
         <a href="#news">Works</a>
-        <a href="#contact">Blog</a>
+        <a href="block.html">Blog</a>
         <a href="#about">Contact</a>
       </div>
     </div>
