--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <img src="img/menu.svg" alt="">
       </a>
       <div id="myLinks">
-        <a href="#news">Works</a>
+        <a href="#">Works</a>
         <a href="block.html">Blog</a>
-        <a href="#about">Contact</a>
+        <a href="#">Contact</a>
       </div>
     </div>
     <!-- End smartphone / tablet look -->
