--- a/block.html
+++ b/block.html
@@ -18,13 +18,13 @@
         <div class="header-nav">
             <ul class="header-menu">
                 <li class="header-menu-item">
-                    <a href="#">Works</a>
-                </li>
-                <li class="header-menu-item">
                     <a href="#">Blog</a>
                 </li>
                 <li class="header-menu-item">
-                    <a href="#">About</a>
+                    <a href="#">Works</a>
+                </li>
+                <li class="header-menu-item">
+                    <a href="#">Contact</a>
                 </li>
             </ul>
         </div>
@@ -38,9 +38,9 @@
         <img src="img/menu.svg" alt="">
       </a>
       <div id="myLinks">
-        <a href="#news">Works</a>
-        <a href="#contact">Blog</a>
-        <a href="#about">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Works</a>
+        <a href="#">Contact</a>
       </div>
     </div>
     <!-- End smartphone / tablet look -->
