--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div class="header-nav">
             <ul class="header-menu">
                 <li class="header-menu-item">
-                    <a href="#">Works</a>
-                </li>
-                <li class="header-menu-item">
                     <a href="block.html">Blog</a>
                 </li>
                 <li class="header-menu-item">
-                    <a href="#">About</a>
+                    <a href="#">Works</a>
+                </li>
+                <li class="header-menu-item">
+                    <a href="#">Contact</a>
                 </li>
             </ul>
         </div>
@@ -38,8 +38,8 @@
         <img src="img/menu.svg" alt="">
       </a>
       <div id="myLinks">
-        <a href="#">Works</a>
         <a href="block.html">Blog</a>
+        <a href="#">Works</a>
         <a href="#">Contact</a>
       </div>
     </div>
