--- a/block.html
+++ b/block.html
@@ -18,10 +18,10 @@
         <div class="header-nav">
             <ul class="header-menu">
                 <li class="header-menu-item">
-                    <a href="#">Blog</a>
+                    <a href="block.html">Blog</a>
                 </li>
                 <li class="header-menu-item">
-                    <a href="#">Works</a>
+                    <a href="works.html">Works</a>
                 </li>
                 <li class="header-menu-item">
                     <a href="#">Contact</a>
@@ -38,8 +38,8 @@
         <img src="img/menu.svg" alt="">
       </a>
       <div id="myLinks">
-        <a href="#">Blog</a>
-        <a href="#">Works</a>
+        <a href="block.html">Blog</a>
+        <a href="works.html">Works</a>
         <a href="#">Contact</a>
       </div>
     </div>
