--- a/works.html
+++ b/works.html
@@ -46,62 +46,9 @@
     <!-- End smartphone / tablet look -->
     </div>
     </header>
-    <section class="">
-        <div class="container">
-            <div class="wrapper">
-                <div class="wrapper-photo-mob">
-                    <img class="wrapper-main-photo" src="img/Ellipse 1.svg" alt="">
-                </div>
-                <div class="container-wrapper">
-                    <div class="container-wrapper-title">
-                        <h1>Hi, I am John, <br> Creative Technologist</h1>
-                    </div>
-                    <div class="container-wrapper-disc">
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                    </div>
-                    <div class="container-wrapper-button">
-                        <a href="">Download Resume</a>
-                    </div>
-                </div>
-                <div class="wrapper-photo">
-                    <img class="wrapper-main-photo" src="img/Ellipse 1.svg" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="section">
-        <div class="main-content">
-            <div class="container">
-                <div class="nav-content">
-                    <h2>Recent posts</h2>
-                    <a class="nav-content-btn-view" href="#">View all</a>
-                </div>
-                <div class="recent-post">
-                    <div class="card-left">
-                        <h2>Making a design system from scratch</h2>
-                        <div class="info-card">
-                            <div class="info-card-left">12 Feb 2020</div>
-                            <div class="info-card-right">Design, Pattern</div>
-                        </div>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                    </div>
-                    <div class="card-right">
-                        <div class="card-left">
-                            <h2>Creating pixel perfect icons in Figma</h2>
-                            <div class="info-card">
-                                <div class="info-card-left">12 Feb 2020</div>
-                                <div class="info-card-right">Figma, Icon Design</div>
-                            </div>
-                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <section>
         <div class="container">
-            <h2 class="container-title">Featured works</h2>
+            <h2 class="container-title">Works</h2>
             <div class="card-Featured-works">
                 <div class="img">
                     <img src="img/Rectangle 30.svg" alt="">
@@ -148,6 +95,23 @@
                         </div>
                         <div class="card-works-type">
                             <p>Typography</p>
+                        </div>
+                    </div>
+                    <p class="card-works-info-desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.</p>
+                </div>
+            </div>
+            <div class="card-Featured-works">
+                <div class="img">
+                    <img src="img/Rectangle 40.svg" alt="">
+                </div>
+                <div class="card-works-info">
+                    <h1 class="card-works-title">Components</h1>
+                    <div class="card-works-date">
+                        <div>
+                            <p class="card-works-year" >2020</p>
+                        </div>
+                        <div class="card-works-type">
+                            <p>Components, Design</p>
                         </div>
                     </div>
                     <p class="card-works-info-desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.</p>
